Added command views to easily switch between filter sets

--- a/src/app/auth/profile/components/userscript/userscript.component.html
+++ b/src/app/auth/profile/components/userscript/userscript.component.html
@@ -100,6 +100,11 @@
 					<h3>Done! You can now start collecting enemy intelligence.</h3>
 				</div>
 
+
+        <app-alert type="info2" [dismissible]="false">
+          <h5><strong>Note:</strong> You do not have to update the GrepoData userscript. Your browser will automatically use the latest version.</h5>
+        </app-alert>
+
 			</div>
 		</div>
 
